tests/lean/1898.lean.expected.out
1898.lean:1:38: error: invalid projection, index must be greater than 0
1898.lean:1:4: error: don't know how to synthesize placeholder
context:
R : Type,
H : has_zero R
⊢ Sort ?
