tests/lean/1898.lean
def X (R : Type) [H : has_zero R] := H.0
